--- a/src/screens/OrganizationActionItems/OrganizationActionItems.module.css
+++ b/src/screens/OrganizationActionItems/OrganizationActionItems.module.css
@@ -16,12 +16,17 @@
 .btnsContainer .btnsBlock {
   display: flex;
   gap: 10px;
+  margin-top: 17px;
 }
 
 .btnsContainer button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.clearFiltersBtn {
+  margin-top: 17px;
 }
 
 .container {
@@ -89,6 +94,10 @@
     transform 0.2s,
     box-shadow 0.2s;
   width: 100%;
+}
+
+h2 {
+  margin-top: 0.5rem;
 }
 
 hr {
@@ -164,6 +173,10 @@ hr {
 
   .btnsContainer button {
     width: 100%;
+  }
+
+  .clearFiltersBtn {
+    margin-top: 0;
   }
 
   .createActionItemButton {
