--- a/src/screens/UserPortal/Settings/Settings.module.css
+++ b/src/screens/UserPortal/Settings/Settings.module.css
@@ -43,5 +43,46 @@
 
 .cardButton {
   width: fit-content;
-  float: right;
+}
+
+.imgContianer {
+  margin: 0 2rem 0 0;
+}
+
+.imgContianer img {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.profileDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+@media screen and (max-width: 1280px) and (min-width: 992px) {
+  .imgContianer {
+    margin: 1rem auto;
+  }
+  .profileContainer {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .profileContainer {
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .imgContianer {
+    margin: 1rem auto;
+  }
+  .profileContainer {
+    flex-direction: column;
+  }
 }
