--- a/src/components/EventListCard/EventListCard.module.css
+++ b/src/components/EventListCard/EventListCard.module.css
@@ -115,6 +115,41 @@
   width: 50%;
 }
 
+.divStyle {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  font-weight: 900;
+}
+
+.divStyle2 {
+  margin: 15px 0;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.divStyle2 > div {
+  width: 8.25rem;
+  margin: 0;
+}
+
+.divStyle2 > button {
+  width: 8.25rem;
+  margin: 0;
+  height: 3rem;
+}
+
+.instyle {
+  border: 0;
+  margin: 5px 0;
+  width: 100%;
+  padding: 12px 10px;
+  background: #f1f3f6;
+  font-weight: 100;
+  border-radius: 6px;
+}
+
 .preview {
   display: flex;
   flex-direction: row;
@@ -158,13 +193,13 @@
   flex-direction: column;
 }
 .titlemodal {
-  color: #707070;
+  color: #000000;
   font-weight: 600;
-  font-size: 20px;
-  margin-bottom: 20px;
+  font-size: 25px;
+  margin-bottom: 0px;
   padding-bottom: 5px;
   border-bottom: 3px solid #31bb6b;
-  width: 65%;
+  width: 50%;
 }
 .cancel > i {
   margin-top: 5px;
