--- a/src/components/UserPortal/EventCard/EventCard.module.css
+++ b/src/components/UserPortal/EventCard/EventCard.module.css
@@ -1,8 +1,9 @@
 .mainContainer {
-  width: 100%;
+  width: 500px;
+  margin: auto;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 10px 15px;
   cursor: pointer;
   background-color: white;
   border-radius: 10px;
@@ -20,7 +21,53 @@
 }
 
 .eventActions {
+  margin-top: 0.5rem;
   display: flex;
   flex-direction: row;
-  justify-content: right;
+  justify-content: center;
+}
+
+.divStyle {
+  display: flex;
+  flex-direction: column;
+  margin: 9px 0;
+  font-weight: 900;
+}
+
+.titlemodal {
+  color: #000000;
+  font-weight: 600;
+  font-size: 25px;
+  margin: 0.5rem 0;
+  padding-bottom: 5px;
+  border-bottom: 5px solid #31bb6b;
+  width: 50%;
+}
+
+.divStyle2 {
+  margin: 9px 0;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.divStyle2 > div {
+  width: 8.25rem;
+  margin: 0;
+}
+
+.divStyle2 > button {
+  width: 8.25rem;
+  margin: 0;
+  height: 3rem;
+}
+
+.instyle {
+  border: 0;
+  margin: 5px 0;
+  width: 100%;
+  padding: 12px 10px;
+  background: #f1f3f6;
+  font-weight: 100;
+  border-radius: 6px;
 }
