--- a/src/screens/OrganizationVenues/OrganizationVenues.module.css
+++ b/src/screens/OrganizationVenues/OrganizationVenues.module.css
@@ -639,7 +639,20 @@
   font-size: 16px;
   cursor: pointer;
 }
-
+.addbtn {
+  border: 1px solid #e8e5e5;
+  box-shadow: 0 2px 2px #e8e5e5;
+  border-radius: 5px;
+  font-size: 16px;
+  height: 60%;
+  color: white;
+  outline: none;
+  font-weight: 600;
+  cursor: pointer;
+  transition:
+    transform 0.2s,
+    box-shadow 0.2s;
+}
 @-webkit-keyframes load8 {
   0% {
     -webkit-transform: rotate(0deg);
