--- a/src/screens/OrganizationFundCampaign/OrganizationFundCampaign.module.css
+++ b/src/screens/OrganizationFundCampaign/OrganizationFundCampaign.module.css
@@ -50,3 +50,10 @@
   color: blue;
   transform: translateY(-2px);
 }
+.message {
+  margin-top: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
