--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -2,6 +2,10 @@
   min-height: 100vh;
 }
 
+.communityLogo {
+  object-fit: contain;
+}
+
 .row .left_portion {
   display: flex;
   justify-content: center;
