Update MemberDetail.test.tsx and DynamicDropDown.module.css, add styles to MemberDetail.module.css, and update Queries.ts and mutations.ts

--- a/src/screens/MemberDetail/MemberDetail.module.css
+++ b/src/screens/MemberDetail/MemberDetail.module.css
@@ -513,3 +513,11 @@ input::file-selector-button {
   background-color: black;
   color: white;
 }
+
+.noOutline {
+  outline: none;
+}
+
+.Outline {
+  outline: 1px solid var(--bs-gray-400);
+}
