--- a/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
+++ b/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
@@ -1,5 +1,6 @@
 .leftDrawer {
   width: calc(300px + 2rem);
+  min-height: 100%;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -9,6 +10,7 @@
   padding: 0.8rem 1rem 0 1rem;
   background-color: var(--bs-white);
   transition: 0.5s;
+  font-family: var(--bs-leftDrawer-font-family);
 }
 
 .activeDrawer {
@@ -36,26 +38,29 @@
 
 .leftDrawer .organizationContainer button {
   position: relative;
-  margin: 1.25rem 0;
+  margin: 0.7rem 0;
   padding: 2.5rem 0.1rem;
-  border-radius: 0.5rem;
-  border: 1px solid var(--bs-gray-300);
-  background-color: var(--bs-gray-100);
+  border-radius: 16px;
 }
 
 .leftDrawer .talawaLogo {
-  width: 42px;
-  height: 42px;
-  margin-right: 0.5rem;
+  width: 50px;
+  height: 50px;
+  margin-right: 0.3rem;
 }
 
 .leftDrawer .talawaText {
-  font-size: 1.1rem;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .leftDrawer .titleHeader {
-  margin-bottom: 1rem;
   font-weight: 600;
+  margin: 0.6rem 0rem;
+}
+
+.leftDrawer .optionList {
+  height: 100%;
 }
 
 .leftDrawer .optionList button {
@@ -64,8 +69,12 @@
   width: 100%;
   text-align: start;
   margin-bottom: 0.8rem;
-  border: 1px solid var(--bs-gray-200);
-  border-radius: 8px;
+  border-radius: 16px;
+  font-size: 16px;
+  padding: 0.6rem;
+  padding-left: 0.8rem;
+  outline: none;
+  border: none;
 }
 
 .leftDrawer button .iconWrapper {
@@ -74,6 +83,7 @@
 
 .leftDrawer .optionList .collapseBtn {
   height: 48px;
+  border: none;
 }
 
 .leftDrawer button .iconWrapperSm {
@@ -83,24 +93,28 @@
   align-items: center;
 }
 
+.leftDrawer .organizationContainer .profileContainer {
+  background-color: #31bb6b33;
+  padding-right: 10px;
+}
+
 .leftDrawer .profileContainer {
   border: none;
   width: 100%;
-  margin-top: 5rem;
-  padding: 2.1rem 0.5rem;
   height: 52px;
-  border-radius: 8px;
+  border-radius: 16px;
   display: flex;
   align-items: center;
+  background-color: var(--bs-white);
 }
 
 .leftDrawer .profileContainer:focus {
   outline: none;
-  background-color: var(--bs-gray-100);
 }
 
 .leftDrawer .imageContainer {
   width: 68px;
+  margin-right: 8px;
 }
 
 .leftDrawer .profileContainer img {
@@ -134,10 +148,6 @@
   text-transform: capitalize;
 }
 
-.logout {
-  margin-bottom: 50px;
-}
-
 @media (max-width: 1120px) {
   .leftDrawer {
     width: calc(250px + 2rem);
@@ -146,6 +156,72 @@
 }
 
 /* For tablets */
+@media (max-height: 900px) {
+  .leftDrawer {
+    width: calc(300px + 1rem);
+  }
+  .leftDrawer .talawaLogo {
+    width: 38px;
+    height: 38px;
+    margin-right: 0.4rem;
+  }
+  .leftDrawer .talawaText {
+    font-size: 1rem;
+  }
+  .leftDrawer .organizationContainer button {
+    margin: 0.6rem 0;
+    padding: 2.2rem 0.1rem;
+  }
+  .leftDrawer .optionList button {
+    margin-bottom: 0.05rem;
+    font-size: 16px;
+    padding-left: 0.8rem;
+  }
+  .leftDrawer .profileContainer .profileText .primaryText {
+    font-size: 1rem;
+  }
+  .leftDrawer .profileContainer .profileText .secondaryText {
+    font-size: 0.8rem;
+  }
+}
+@media (max-height: 650px) {
+  .leftDrawer {
+    padding: 0.5rem 0.8rem 0 0.8rem;
+    width: calc(250px);
+  }
+  .leftDrawer .talawaText {
+    font-size: 0.8rem;
+  }
+  .leftDrawer .organizationContainer button {
+    margin: 0.2rem 0;
+    padding: 1.6rem 0rem;
+  }
+  .leftDrawer .titleHeader {
+    font-size: 16px;
+  }
+  .leftDrawer .optionList button {
+    margin-bottom: 0.05rem;
+    font-size: 14px;
+    padding: 0.4rem;
+    padding-left: 0.8rem;
+  }
+  .leftDrawer .profileContainer .profileText .primaryText {
+    font-size: 0.8rem;
+  }
+  .leftDrawer .profileContainer .profileText .secondaryText {
+    font-size: 0.6rem;
+  }
+  .leftDrawer .imageContainer {
+    width: 40px;
+    margin-left: 5px;
+    margin-right: 12px;
+  }
+  .leftDrawer .imageContainer img {
+    width: 40px;
+    height: 100%;
+  }
+}
+
 @media (max-width: 820px) {
   .hideElemByDefault {
     display: none;
