--- a/src/screens/EventDashboard/EventDashboard.module.css
+++ b/src/screens/EventDashboard/EventDashboard.module.css
@@ -3,16 +3,82 @@
   flex-direction: row;
 }
 
-.toporgloc {
-  padding-top: 8px;
-  font-size: 16px;
-}
-.sidebar {
-  z-index: 0;
-  padding-top: 5px;
-  margin: 0;
+.content {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  background: #ffffff;
+  border-radius: 16px;
+  margin-bottom: 0rem;
 }
+
+.content p,
+h4 {
+  margin: 0;
+}
+
+.eventContainer {
+  display: flex;
+  align-items: center;
+}
+
+.eventDetailsBox {
+  position: relative;
+  margin-left: 50px;
+  height: 90%;
+  width: 45%;
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 1px solid #dddddd;
+  border-radius: 8px;
+  margin-bottom: 0;
+}
+
+.eventDetailsBox::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 6px;
+  background-color: #31bb6b;
+  border-radius: 8px;
+}
+
+.time {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  padding-bottom: 0px;
+}
+
+.startTime,
+.endTime {
+  display: flex;
+  font-size: 20px;
+}
+
+.to {
+  padding-right: 10px;
+}
+
+.startDate,
+.endDate {
+  color: #808080;
+  font-size: 14px;
+}
+
+.toporgloc {
+  font-size: 16px;
+  padding: 15px;
+  padding-bottom: 0px;
+}
+.toporgloc span {
+  color: #737373;
+}
+
 .sidebar:after {
   background-color: #f7f7f7;
   position: absolute;
@@ -22,26 +88,29 @@
   left: 94%;
   display: block;
 }
-.sidebarsticky {
-  padding-left: 30px;
-}
+
 .sidebarsticky > p {
   margin-top: -10px;
   width: 90%;
 }
 
 .description {
+  color: #737373;
+  font-weight: 300;
+  font-size: 14px;
   word-wrap: break-word;
+  padding: 15px;
+  padding-bottom: 0px;
 }
 
 .titlename {
-  color: #707070;
   font-weight: 600;
   font-size: 20px;
-  margin-bottom: 30px;
-  padding-bottom: 5px;
+  padding: 15px;
+  padding-bottom: 0px;
   width: 100%;
 }
+
 .tagdetailsGreen > button {
   background-color: #31bb6b;
   color: white;
